# nctui

./: .mcp.json  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
scripts/: build-static.sh
src/: app.rs  backend.rs  heatmap.rs  histogram.rs  lib.rs  main.rs  search.rs  slice_picker.rs  stats.rs  table_preview.rs  tree.rs  ui.rs
tests/: snapshots.rs
tests/snapshots/: snapshots__app_snapshots__app_help_modal.snap  snapshots__app_snapshots__app_initial.snap  snapshots__app_snapshots__app_search_active.snap  snapshots__app_snapshots__app_with_data.snap  snapshots__heatmap_single_row.snap  snapshots__heatmap_small.snap  snapshots__heatmap_uniform.snap  snapshots__heatmap_with_coords.snap  snapshots__heatmap_with_nan.snap  snapshots__histogram_degenerate.snap  snapshots__histogram_few_bins.snap  snapshots__histogram_hidden.snap  snapshots__histogram_normal.snap  snapshots__search_bar_active_query.snap  snapshots__search_bar_inactive.snap  snapshots__search_results.snap  snapshots__slice_picker_3d.snap  snapshots__slice_picker_4d.snap  snapshots__stats_panel_basic.snap  snapshots__stats_panel_empty.snap  snapshots__stats_panel_with_nan.snap  snapshots__table_preview_1d.snap  snapshots__table_preview_2d.snap  snapshots__table_preview_with_coords.snap  snapshots__tree_both_expanded.snap  snapshots__tree_collapsed.snap  snapshots__tree_expanded_atmosphere.snap  snapshots__tree_selection_on_variable.snap
