[package]
name = "nctui"
version = "0.8.0"
edition = "2021"
description = "Terminal UI viewer for NetCDF4 / HDF5 datasets"

[features]
default = ["netcdf-backend"]
# Enable the real NetCDF/HDF5 backend (file reading).
# Disable with --no-default-features for a TUI-only widget library.
netcdf-backend = ["dep:netcdf"]
# Build libnetcdf + libhdf5 from source for a fully self-contained static
# binary. Requires cmake and a C/C++ compiler at build time.
static = ["netcdf-backend", "netcdf/static"]

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
indexmap = "2"
strum = { version = "0.26", features = ["derive"] }
unicode-width = "0.1"
netcdf = { version = "0.11", optional = true, default-features = false }

[dev-dependencies]
insta = "1"

# Optimised release profile — used by both dynamic and static builds
[profile.release]
lto = true
codegen-units = 1
strip = true
